Fixed spacing of edition icons

--- a/src/Styles/CopyLink.css
+++ b/src/Styles/CopyLink.css
@@ -1,5 +1,4 @@
 .CopyLink span{
-    margin-right: 5px;
     color: var(--thirdFontColor);
     cursor: pointer;
 }
