--- a/src/Styles/DeletePost.css
+++ b/src/Styles/DeletePost.css
@@ -58,7 +58,7 @@ button.Delete{
     color: var(--red);
     cursor: pointer;
     font-size: small;
-    margin: 5px;
+    margin: 0px;
     padding: 5px;
     transition: all 0.2s ease-in-out;
 }
