--- a/src/Styles/EditPost.css
+++ b/src/Styles/EditPost.css
@@ -48,7 +48,6 @@
     color: var(--primaryFontColor);
     cursor: pointer;
     font-size: small;
-    margin: 5px;
     padding: 5px;
     transition: all 0.2s ease-in-out;
 }
